# swapbytes

./: .gitignore  Cargo.toml  README.md
src/: chat.rs  logger.rs  login.rs  main.rs  network.rs  state.rs  tui.rs
src/ui/: chat.rs  commands.rs  cursor.rs  login.rs  mod.rs
src/ui/tabs/: direct_messaging.rs  mod.rs  room.rs  select_room.rs
